--- a/SPA/layout.html
+++ b/SPA/layout.html
@@ -21,7 +21,15 @@
         left       : 4px;
         height     : 32px;
         width      : 128px;
-        background: url ('logo.jpg');
+        background-image: url('logo2.jpg'); 
+        background-size:128px 32px;
+      }
+      .spa-shell-head-navButton {
+        top        : 4px;
+        left       : 134px;
+        height     : 32px;
+        width      : 32px;
+        background : red;
       }
       .spa-shell-head-acct {
         top        : 4px;
@@ -97,14 +105,15 @@
     <div id="spa">
       <div class="spa-shell-head">
         <div class="spa-shell-head-logo"></div>
+        <div class="spa-shell-head-navButton"></div>
         <div class="spa-shell-head-acct"></div>
-        <div class="spa-shell-head-search"></div>
+        <div class="spa-shell-head-search" ></div>
       </div>
-      <div class="spa-shell-main">
+      <div class="spa-shell-main" >
         <div class="spa-shell-main-nav"></div>
         <div class="spa-shell-main-content"></div>
       </div>
-      <div class="spa-shell-foot"></div>
+      <div class="spa-shell-foot" ></div>
       <div class="spa-shell-chat"></div>
       <div class="spa-shell-modal"></div>
     </div>
