work on nav bar

--- a/SPA/layout.html
+++ b/SPA/layout.html
@@ -4,7 +4,7 @@
     <title>HTML Layout</title>
     <link rel="stylesheet" href="css/spa.css" type="text/css"/>
     <style>
-      .spa-shell-head, .spa-shell-head-logo, .spa-shell-head-acct,
+      .spa-shell-head, .spa-shell-head-logo, .spa-shell-head-navButton, .spa-shell-head-acct,
       .spa-shell-head-search, .spa-shell-main, .spa-shell-main-nav,
       .spa-shell-main-content, .spa-shell-foot, .spa-shell-chat,
       .spa-shell-modal {
@@ -26,7 +26,7 @@
       }
       .spa-shell-head-navButton {
         top        : 4px;
-        left       : 134px;
+        left       : 136px;
         height     : 32px;
         width      : 32px;
         background : red;
